format home page

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -1,5 +1,6 @@
 ---
-layout: default
+layout: page
+title: "Team"
 ---
 <div class="team-profile section py-4">
   <h3 class="section-title text-center m-5">{{ page.name }}<span class="team-position">{{ page.position }}</span></h3>
