--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,7 @@
     </main>
 
     <footer>
-      <!-- Include site footer (optional) -->
-      {% include footer.html %}
+      <p style="text-align: center;">© 2024 Jardine Lab. Powered by Jekyll & Minimal Mistakes.</p>
     </footer>
   </body>
 </html>
