--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,29 +3,8 @@ layout: default
 ---
 <!DOCTYPE html>
 <html lang="en">
+  <style>
+  </style>
   <body>
-    <main>
-      <section class="hero">
-        <a href="/research/" class="button">Explore Research</a>
-      </section>
-
-      <section class="feature-row">
-        <h3>Our Key Areas</h3>
-        <div class="feature">
-          <h4>Research</h4>
-          <p>Explore our projects and publications.</p>
-          <a href="/research/" class="button">Read More</a>
-        </div>
-        <div class="feature">
-          <h4>Our Team</h4>
-          <p>Meet the people behind our work.</p>
-          <a href="/team/" class="button">Meet the Team</a>
-        </div>
-      </section>
-    </main>
-
-    <footer>
-      <p>&copy; {{ site.time | date: "%Y" }} {{ site.title }}</p>
-    </footer>
   </body>
 </html>
