finished team page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -166,6 +166,9 @@
           <a href="{{ '/team/' | relative_url }}">People</a>
         </li>
         <li>
+          <a href="{{ '/values/' | relative_url }}">Values</a>
+        </li>
+        <li>
           <a href="{{ '/research/' | relative_url }}">Research</a>
         </li>
         <li>
@@ -176,9 +179,6 @@
         </li>
       </ul>
       <ul>
-        <li>
-          <a href="https://twitter.com/haniffalab"><i class="fab fa-twitter"></i></a>
-        </li>
         <li>
           <a href="https://github.com/haniffalab/"><i class="fab fa-github"></i></a>
         </li>
