--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,16 +2,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jardine Lab</title>
   <style>
 
     /* General Styles */
+
     body {
-      font-family: Poppins,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
-      margin: 0;
-      padding: 0;
+      font-family: Poppins,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif; /* Change to the desired font */
+      color: #333; /* You can also change the default text color */
+      padding-left: 40px;padding-right: 40px;
     }
     
     /* Welcome Section Styles */
