team page changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,8 +11,8 @@
     /* General Styles */
 
     body {
-      font-family: Poppins,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif; /* Change to the desired font */
-      color: #333; /* You can also change the default text color */
+      font-family: Poppins,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+      color: #333; 
       padding-left: 40px;padding-right: 40px;
     }
     
