--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,12 +3,12 @@ footer {
     text-align: center;
     padding: 20px;
     background-color: #f5f5f5;
-    font-size: 14px;
+    font-size: 10px;
     color: #333;
   }
 </style>
 
 <footer>
-    <p style="text-align: center; margin: 20px 0;">© 2024 Jardine Lab. Powered by <a href="https://jekyllrb.com/">Jekyll</a> & <a href="https://mmistakes.github.io/minimal-mistakes/">Minimal Mistakes</a>.</p>
+    <p style="text-align: left; margin: 20px 0;">© 2024 Jardine Lab</p>
   </footer>
   
