--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     </main>
 
     <footer>
-      <p style="text-align: center;">© 2024 Jardine Lab. Powered by Jekyll & Minimal Mistakes.</p>
+      <p style="text-align: right; font-size: 15px;margin: 20px 0;padding: 20px;">© 2024 Jardine Lab</p>
     </footer>
   </body>
 </html>
