--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,29 +26,24 @@
       min-height: 50vh; /* Full viewport height */
       text-align: left;
     }
-    
-    .container {
-    max-width: 1000px;  /* Page width is limited to 900px */
-    margin: 0 auto;    /* Horizontally center the page */
-    padding: 20px;     /* Add padding around the content */
-    background-color: white;
-  }
   
   .inner-wrapper {
-  margin-top: auto;
-  margin-bottom: auto;
-  max-width: 800px;
+  max-width: 900px;
   padding: 0px;
+  align-items: left;
 }
   
 
 .welcome-heading {
-  font-size: 1.5em; /* Large heading */
-  text-align: left; /* Ensure heading is aligned to the left */
+  font-family: 'Georgia', serif; 
+  font-size: 2em;
+  text-align: left;
+  margin-bottom: 10px;
 }
 
 .lead {
-  font-size: 1em; /* Lead text size */
+  font-size: 1.2em; /* Lead text size */
+  font-family: Poppins,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
   text-align: left; /* Ensure lead paragraph is aligned to the left */
 }
 
@@ -61,8 +56,10 @@
     }
 
     li {
+      font-size: 1.2em; /* Lead text size */
+      font-family: Poppins,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
       padding-left: 0px; /* Add padding to indent the list items */
-      margin-bottom: 10px; /* Space between list items */
+      margin-bottom: 20px; /* Space between list items */
     }
 
     /* Navigation Bar Styles */
@@ -74,16 +71,10 @@
       border-top: 4px solid #ff9999; /* Top border line */
       border-bottom: 4px solid #ff9999; /* Bottom border line */
       display: flex;
-      width: 100vw; /* Full viewport width */
+      width: 98vw; /* Full viewport width */
       position: relative; /* Make sure it can expand */
       left: 50%; /* Centering trick */
       transform: translateX(-50%); /* Center the navbar */
-    }
-
-    .navbar-brand {
-      text-decoration: none;
-      font-size: 24px; /* Brand text size */
-      color: #001a21; /* Brand color */
     }
 
     .navbar ul {
@@ -95,14 +86,15 @@
 
     .navbar ul li {
       position: relative; /* For dropdown positioning */
-      margin-left: 10px; /* Space between items */
+      margin-left: 0px; /* Space between items */
     }
 
     .navbar ul li a {
 
       text-decoration: none;
-      padding: 0px 15px; /* Link padding */
+      padding:15px 15px; /* Link padding */
       display: block;
+      font-size: 17px;
       color: #336699; /* Link color */
       transition: background-color 0.3s, color 0.3s; /* Smooth transition */
     }
@@ -196,7 +188,7 @@
       <li>We work by combining multi-omics techniques, often simultaneously in individual cancer cells and repeating measurements serially across treatment timepoints.</li>
       <li>Our goal is to achieve precise identification of high-risk features earlier in the disease course, and to identify new approaches for targeting the cells and pathways that drive relapse.</li>
     </ul>
-    <a href="/research/" style="display: inline-block; padding: 10px 20px; background-color: transparent; border: 2px solid #336699; color: #336699; text-decoration: none; border-radius: 20px;">Learn More</a>
+    <a href="/research/" style="display: inline-block; padding: 10px 20px;margin-top: 10px; background-color: transparent; border: 2px solid #336699; color: #336699; text-decoration: none; border-radius: 20px;">Learn More</a>
   </div>
   <!-- / Inner Wrapper -->
   {% endif %}
