--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   {% include head.html %} <!-- Call head.html here -->
+  
+  <!-- Add Favicon -->
+   <link rel="icon" href="{{ '/assets/img/favicon.ico' | relative_url }}" type="image/x-icon" />
 
   <body>
     <header>
