add small title changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -68,8 +68,8 @@
       justify-content: space-between;
       align-items: center;
       padding: 10px 10px; /* Navbar padding */
-      border-top: 4px solid #ff9999; /* Top border line */
-      border-bottom: 4px solid #ff9999; /* Bottom border line */
+      border-top: 4px solid #CCCCFF; /* Top border line */
+      border-bottom: 4px solid #CCCCFF; /* Bottom border line */
       display: flex;
       width: 98vw; /* Full viewport width */
       position: relative; /* Make sure it can expand */
@@ -100,7 +100,7 @@
     }
 
     .navbar ul li a:hover {
-      background-color: #FF9999; /* Background color on hover */
+      background-color: #CCCCFF; /* Background color on hover */
     }
 
     /* Dropdown Menu Styles */
@@ -167,11 +167,6 @@
         </li>
         <li>
           <a href="{{ '/publications/' | relative_url }}">Publications</a>
-        </li>
-      </ul>
-      <ul>
-        <li>
-          <a href="https://github.com/haniffalab/"><i class="fab fa-github"></i></a>
         </li>
       </ul>
     </nav>
